--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,7 @@ fabric.properties
 
 # .so Files #
 app/src/main/jniLibs/*/*.so
+
+# ignore files
+!app/src/main/jniLibs/*/libnama.so
+!app/libs/nama.jar
